kustomize/base/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment2
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app2
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app2
    spec:
      containers:
        - image: 210217920752.dkr.ecr.us-east-2.amazonaws.com/eks-sample-test-sample-app:latest
          imagePullPolicy: Always
          name: app2
          ports:
            - containerPort: 80
          volumeMounts:
            - name: mount
              mountPath: '/mount'
              readOnly: true

      volumes:
        - name: mount
          emptyDir: {}
