kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app1

---
apiVersion: v1
kind: Service
metadata:
  name: service2
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app2
