kustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: production
  annotations:
    # https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.2/guide/ingress/annotations/
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    alb.ingress.kubernetes.io/security-groups: alb, internal, https
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: 'true'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-2:210217920752:certificate/60eebf1d-0045-42fb-8304-e3f488cf85ac
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
spec:
  defaultBackend:
    service:
      name: app2
      port:
        number: 80

  ingressClassName: alb
  tls:
    - hosts:
        - wanchanmask.net
  rules:
    - http:
        paths:
          - path: /app1
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
          - path: /app2
            pathType: Prefix
            backend:
              service:
                name: service2
                port:
                  number: 80
